recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value shronk
 if (steps==1){subtree(1,length,angle,shronk)}
                                      ^